# urban-policy-simulation

./: .clinerules  .cursorrules  .env.example  .gitignore  .windsurfrules  CLAUDE.md  CONTRIBUTING.md  DECISIONS.md  LICENSE  README.md  REQUIREMENTS.md  docker-compose.yml  package.json  rule.md
.github/: CLAUDE.md  rule.md
.github/workflows/: backend-ci.yml  simulation-ci.yml
ai/: .gitignore  CHANGES.md  CLAUDE.md  PROJECT_SPEC.md  PROJECT_SUMMARY.md  ROLE_2_AGENT_BEHAVIOR.md  gemini-code-1780254276846.md  pyproject.toml  rule.md
ai/docs/subsystems/: SUB-02.md
ai/sim/agents/: __init__.py  agent.py  alternatives.py  household.py  memory.py  mode_choice.py  modes.py  population.py  retail_interaction.py  retail_memory.py  schedule.py  shop_choice.py  stall_owner.py  store_agents.py  utility_weights.py
ai/sim/scripts/: demo_day.py  demo_shopping.py  demo_two_agents.py  smoke_test_agents.py  smoke_test_conditions.py  smoke_test_policies.py
ai/sim/tests/: test_advanced_behaviors.py  test_agents_smoke.py  test_population.py  test_retail_agents.py  test_two_agents.py
backend/: .dockerignore  .env.example  CLAUDE.md  Dockerfile  README.md  pyproject.toml  rule.md
backend/app/: __init__.py  config.py  main.py
backend/app/api/: deps.py
backend/app/api/routes/: events.py  health.py  metrics.py  scenarios.py  snapshots.py
backend/app/models/: schemas.py
backend/app/services/: scenario_manager.py
backend/app/sim/: adapter.py  fake_engine.py
backend/app/store/: metadata.py  state.py
backend/app/ws/: manager.py  stream.py
backend/docs/: ROLE_5_BACKEND.md
backend/tests/: conftest.py  test_health.py  test_scenarios.py  test_ws.py
data/: .gitignore  CLAUDE.md  README.md  requirements.txt  rule.md
data/pipelines/: 01_download_osm_delhi.py  02_download_gtfs_delhi.py  03_clean_road_network.py  04_parse_gtfs_to_network.py  05_generate_population_delhi.py  06_validate_outputs.py  1_download_osm_network.py  2_fetch_census_demographics.py  README.md  (+4 more)
docs/: CLAUDE.md  rule.md
frontend/: CLAUDE.md  README.md  index.html  package-lock.json  rule.md
infra/: CLAUDE.md  rule.md
research/: CLAUDE.md  rule.md
shared/: CLAUDE.md  rule.md
simulation/: CLAUDE.md  pyproject.toml  requirements.txt  rule.md
simulation/agents/rules/: rule.md
simulation/docs/: PROJECT_SPEC (1).md  ROLE_1_SIMULATION_CORE.md
simulation/simulation/: __init__.py  agents.py  engine.py  metrics.py  network.py
simulation/tests/: test_simulation.py
(+18 files in other folders)
